actualizacion app y openapi
